﻿Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

### 2018-04-28
	Added: Power down monitors when session is locked. Core.ini has two settings for this, one to control user idle timer and second for instant power down.
### 2018-04-25
	Added: [Debug] section in Core.ini with secret options to enable various debug functions at launch.
### 2018-04-24
	Fixed: Default power mode is not applied on start-up if auto-adjust is disabled.
	Removed: Experimental path location feature. Limited usability, documentation, and lack of desire to maintain it made it unwanted.
	Changed: You can now copy multiple lines from the log at the same time to clipboard.
### 2018-04-23
	Fixed: Error at HealthMonitor.cs:380 when foreground monitor was disabled.
	Changed: How empty watchlist is detected.
### 2018-04-22
	Fixed: Retarded WinForms bug.
### 2018-04-18
	Added: Health monitor now warns of low diskspace. Defaults to 150 MB.
	Added: Experimental feature to resize detected apps. Usable as `Resize={Top,Left,Width,Height}` in Watchlist.ini.
	Added: `Remember size=true/false` and `Remember position=true/false` in Watchlist.ini to control the `Resize` option.
	Fixed: Removing a rule did not do proper cleanup, causing rule with similar options to not work correctly without restart.
### 2018-04-17
	Added: Option to disable showing TM in taskbar. Found in Configuration > Behaviour in main window menubar.
### 2018-04-16
	Added: Core.ini option `Immediate configuration saving`, which instead of marking configs for saving on exit, immediately saves them. Disabled by default.
	Changed: Status bar now includes touch count since launch and uses proper labels instead of whatever garbage it was before.
	Fixed: Resizing from window borders now works for main window.
### 2018-04-15
	Added: Extra debug relating to restarting TM.
	Added: Change log started. Older entries are based on scarce notes.